# cubeworld

./: .gitignore  CMakeLists.txt  README.md  build.sh  launch.bat
assets/shaders/: arm.frag  arm.vert  chunk.frag  chunk.vert  highlight.frag  highlight.vert  icon.frag  icon.vert  ui.vert
assets/textures/: gen_textures.py
cmake/: mingw-toolchain.cmake
src/: Block.h  Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  Shader.cpp  Shader.h  World.cpp  World.h  main.cpp
